--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -28,7 +28,7 @@ html
       p To get started, please register for an account or log in if you already have one. Once you're logged in, you can start managing your events right away!
       
       h3 Contact Us
-      p If you have any questions or need assistance, feel free to reach out to our support team at support@example.com.
+      p If you have any questions or need assistance, feel free to reach out to our support team at team5@anurag.edu.in.
 
     footer
       p &copy; 2024 Event Management App
