--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -19,7 +19,7 @@ html
       h3 Features
       ul
         li User-friendly interface for easy navigation.
-        li Create, edit, and delete events with just a few clicks.
+        li Create and delete events with just a few clicks.
         li Set reminders for important dates and deadlines.
         li View all your upcoming events at a glance.
         li Secure login and user authentication to protect your data.
