--- a/public/css/home.css
+++ b/public/css/home.css
@@ -21,7 +21,7 @@
   
   /* Header Styles */
   header {
-    background-color: #4CAF50; /* Dark green */
+    background-color: green; /* Dark green */
     color: white;
     padding: 20px;
     text-align: center;
