--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -11,24 +11,22 @@ html
         a(href='/register') Register
         a(href='/login') Login
         a(href='/about') About
+        a(href='/upcoming') Event List
 
-    main
-      h2 Welcome to the Event Management App
-      p This application helps you manage your events efficiently and effectively. Whether you are planning a small gathering or a large conference, our app provides the tools you need to ensure that your events run smoothly.
-      
-      h3 Features
-      ul
-        li User-friendly interface for easy navigation.
-        li Create and delete events with just a few clicks.
-        li Set reminders for important dates and deadlines.
-        li View all your upcoming events at a glance.
-        li Secure login and user authentication to protect your data.
-
-      h3 Get Started
-      p To get started, please register for an account or log in if you already have one. Once you're logged in, you can start managing your events right away!
-      
-      h3 Contact Us
-      p If you have any questions or need assistance, feel free to reach out to our support team at team5@anurag.edu.in.
-
+    main.container
+      .image-container
+        img(src='/images/images.jpeg', alt='Event Image 1')
+        img(src='/images/istockphoto-1191395009-1024x1024.jpg', alt='Event Image 2')
+      .content
+        h2 Welcome to the Event Management App
+        p This application helps you manage your events efficiently and effectively.
+        h3 Features
+        ul
+          li User-friendly interface for easy navigation.
+          li Create, edit, and delete events with just a few clicks.
+          li Set reminders for important dates and deadlines.
+          li View all your upcoming events at a glance.
+          li Secure login and user authentication to protect your data.
+          
     footer
       p &copy; 2024 Event Management App
